// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deprecated ssr public exports > should not change unexpectedly 1`] = `
[
  "getAuth",
  "rootAuthLoader",
]
`;

exports[`legacy public exports > should not change unexpectedly 1`] = `
[
  "useSignIn",
  "useSignUp",
]
`;

exports[`root public exports > should not change unexpectedly 1`] = `
[
  "APIKeys",
  "AuthenticateWithRedirectCallback",
  "ClerkDegraded",
  "ClerkFailed",
  "ClerkLoaded",
  "ClerkLoading",
  "ClerkProvider",
  "CreateOrganization",
  "GoogleOneTap",
  "OrganizationList",
  "OrganizationProfile",
  "OrganizationSwitcher",
  "PricingTable",
  "Protect",
  "RedirectToCreateOrganization",
  "RedirectToOrganizationProfile",
  "RedirectToSignIn",
  "RedirectToSignUp",
  "RedirectToTasks",
  "RedirectToUserProfile",
  "SignIn",
  "SignInButton",
  "SignInWithMetamaskButton",
  "SignOutButton",
  "SignUp",
  "SignUpButton",
  "SignedIn",
  "SignedOut",
  "TaskChooseOrganization",
  "TaskResetPassword",
  "UserAvatar",
  "UserButton",
  "UserProfile",
  "Waitlist",
  "__experimental_CheckoutProvider",
  "__experimental_PaymentElement",
  "__experimental_PaymentElementProvider",
  "__experimental_useCheckout",
  "__experimental_usePaymentElement",
  "useAuth",
  "useClerk",
  "useEmailLink",
  "useOrganization",
  "useOrganizationList",
  "useReverification",
  "useSession",
  "useSessionList",
  "useSignIn",
  "useSignUp",
  "useUser",
]
`;

exports[`server public exports > should not change unexpectedly 1`] = `
[
  "clerkClient",
  "clerkMiddleware",
  "createClerkClient",
  "getAuth",
  "rootAuthLoader",
  "verifyToken",
]
`;
